kubernetes/wazuh/wazuh-server/wazuh-server-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wazuh-server-ingress
  namespace: wazuh
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: wazuh-server.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: wazuh-server-service
            port:
              number: 1516
